Styled the nav element to be fixed on the top of the page, and its content to be aligned evenly via flex. Changed the font, color, removed padding and margin, etc.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,35 @@
 html,
 body {
-	margin: 0%;
+	margin: 0;
+	padding: 0;
 }
 
 /* Navbar */
+
+nav {
+	position: fixed;
+	width: 100%;
+	background-color: #ffbd20;
+	top: 0;
+	z-index: 1;
+}
+
+#nav-wrapper {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	list-style: none;
+	margin: 0;
+	padding-left: 0;
+	padding-right: 0;
+	padding-top: calc(0.5em + 0.5vw);
+	padding-bottom: calc(0.5em + 0.5vw);
+}
+
+.nav-items a {
+	text-decoration: none;
+	color: black;
+	font-size: calc(0.5em + 0.8vw);
+	font-family: Garamond, serif;
+	font-weight: bold;
+}
